[gd_scene load_steps=18 format=2]

[ext_resource path="res://Art/enemy_drone-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/FlyingEnemy.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EnemyHitbox.gd" type="Script" id=3]
[ext_resource path="res://Scripts/WanderController.gd" type="Script" id=4]
[ext_resource path="res://Scripts/PlayerDetcectionZone.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SoftCollision.gd" type="Script" id=6]
[ext_resource path="res://Sound/explosion_1.wav" type="AudioStream" id=7]
[ext_resource path="res://Sound/hit_1.wav" type="AudioStream" id=8]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Dead"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12, 13, 14, 15, 16, 17 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 7 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "Idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]

[sub_resource type="RectangleShape2D" id=7]

[sub_resource type="GDScript" id=8]
script/source = "extends Control

onready var health_over = $HealthBarOver
onready var health_under = $HealthBarUnder
onready var update_tween = $UpdateTween


func _on_FlyingEnemy_damaged(health):
	print(health)
	health_over.value = health
	update_tween.interpolate_property(health_under, \"value\", health_under.value, health, 0.4, Tween.TRANS_SINE, Tween.EASE_IN_OUT, 0.2)
	update_tween.start()
"

[node name="FlyingEnemy" type="KinematicBody2D"]
collision_layer = 2147483712
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.52, 0.789 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 1.11488, 0 )
texture = ExtResource( 1 )
vframes = 2
hframes = 9
frame = 17

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.75
anims/Dead = SubResource( 2 )
anims/Idle = SubResource( 3 )

[node name="EnemyHitbox" type="Area2D" parent="."]
visible = false
collision_layer = 2147483680
collision_mask = 4
script = ExtResource( 3 )

[node name="Hitbox" type="CollisionShape2D" parent="EnemyHitbox"]
scale = Vector2( 0.4, 0.65 )
shape = SubResource( 4 )

[node name="EnemyHurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 2147483664
collision_mask = 2147483656

[node name="Hurtbox" type="CollisionShape2D" parent="EnemyHurtbox"]
scale = Vector2( 0.45, 0.75 )
shape = SubResource( 5 )

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WanderController" type="Node2D" parent="."]
visible = false
script = ExtResource( 4 )

[node name="WanderTimer" type="Timer" parent="WanderController"]
one_shot = true
autostart = true

[node name="PlayerDectectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDectectionZone"]
scale = Vector2( 5, 5 )
shape = SubResource( 6 )

[node name="SoftCollision" type="Area2D" parent="."]
visible = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
scale = Vector2( 0.44, 0.7 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0

[node name="HealthBar" parent="." instance=ExtResource( 9 )]
margin_left = -9.0
margin_top = -11.0
margin_right = -9.0
margin_bottom = -10.92
rect_scale = Vector2( 0.25, 0.25 )
script = SubResource( 8 )

[node name="HealthBarUnder" parent="HealthBar" index="0"]
max_value = 30.0
value = 30.0

[node name="HealthBarOver" parent="HealthBar" index="1"]
max_value = 30.0
value = 30.0
texture_over = null
[connection signal="damaged" from="." to="HealthBar" method="_on_FlyingEnemy_damaged"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_EnemyHitbox_area_entered"]
[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_KnockbackTimer_timeout"]
[connection signal="timeout" from="WanderController/WanderTimer" to="WanderController" method="_on_WanderTimer_timeout"]
[connection signal="body_entered" from="PlayerDectectionZone" to="PlayerDectectionZone" method="_on_PlayerDecectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDectectionZone" to="PlayerDectectionZone" method="_on_PlayerDecectionZone_body_exited"]

[editable path="HealthBar"]
